overlap fixed
overlap project card fixed

--- a/projects.css
+++ b/projects.css
@@ -6,6 +6,8 @@
   background: #fff;
   border-radius: 6px;
   border: 4px solid #f3826f;
+  position: static;
+  z-index: 100;
 
 }
 
